--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script src="https://kit.fontawesome.com/b948087216.js" crossorigin="anonymous"></script>
     </head>
     <body style = "margin: 0;">
-        <nav>
+        <nav class="navigation">
             <img class="logo" src="/Callum Logo - Finish.png"></div>
             <ul id="nav-list">
                 <li><a href="#about-me">About Me</a></li>
