--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
         <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/b948087216.js" crossorigin="anonymous"></script>
     </head>
+    
     <body style = "margin: 0;">
+        <main>
         <nav class="navigation">
             <img class="logo" src="/Callum Logo - Finish.png"></div>
             <ul id="nav-list">
                 <li><a href="#about-me">About Me</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact">Contact</a></li> 
             </ul>
             <button class="hamburger" id="hamburger">
                 <i class="fas fa-bars"></i>
@@ -25,7 +26,7 @@
             <div class="hero-area">
                 <div class="hero-text">
                     <h1>Callum Maclachlan</h1>
-                    <p style="font-size: 35px;">Web Designer</p>
+                    <p style="font-size: 35px;">Software & Website Developer</p>
                     <div class="button"><a href="#about-me">About Me</a></div>
                 </div>
                 <div class="media">
@@ -38,13 +39,17 @@
                     <div class="social"><a target="_blank" href="mailto: varano_1@hotmail.co.uk">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="#ffffff" width="50" height="50" viewBox="0 0 24 24"><path d="M0 3v18h24v-18h-24zm6.623 7.929l-4.623 5.712v-9.458l4.623 3.746zm-4.141-5.929h19.035l-9.517 7.713-9.518-7.713zm5.694 7.188l3.824 3.099 3.83-3.104 5.612 6.817h-18.779l5.513-6.812zm9.208-1.264l4.616-3.741v9.348l-4.616-5.607z"/></svg>
                     </a></div>
+                    <div class="social"><a target="_blank" href="./Callum Maclachlan - CV (Software Engineering).pdf"><img src="./CV.png" width="50" height="50" viewBox="0 0 24 24" fill="#ffffff"></a></div>
                 </div>
             </div>
         </section>
         <section class="sub-section" id="about-me">
             <div class="information">
                 <h2>About Me</h2>
-                <p style="font-size: 25px;">Hi I'm Callum, I'm a Software Developer and Web Designer, with a passion for creativity and problem solving.</p>
+                <p style="font-size: 25px;">Hi I'm Callum, I'm a Software Developer and Web Designer, with a passion for creativity and problem solving.
+                    <br><br>
+                    I'm self taught and am currently completing a 'Full Stack Developer' course through Codecademy.
+                </p>
             </div>
             <div class="headshot-container"><img class="headshot" src="/Profile Picture.png"/></div>
         </section>
@@ -74,7 +79,7 @@
                 </div>
             </div>
         </section>
-        <footer id="contact"></footer>
+        </main>
         <script src="app.js"></script>
     </body>
 </html>
